# live2d.aicha

./: AndroidStudioProjects.lnk  build.gradle.kts  fix-lappmodel.patch  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts  google-services.json
app/CubismSdkForNative-5-r.3/Framework/: CMakeLists.txt  LAppPal.cpp  LAppPal.hpp  README.md
app/CubismSdkForNative-5-r.3/Framework/src/: CMakeLists.txt  CubismFramework.cpp  CubismFramework.hpp  Live2DCubismCore.hpp
app/CubismSdkForNative-5-r.3/Framework/src/Effect/: CMakeLists.txt
app/CubismSdkForNative-5-r.3/Framework/src/Id/: CMakeLists.txt  CubismId.hpp
app/CubismSdkForNative-5-r.3/Framework/src/Math/: CMakeLists.txt  CubismMath.hpp
app/CubismSdkForNative-5-r.3/Framework/src/Model/: CMakeLists.txt  CubismModelUserDataJson.hpp  CubismUserModel.hpp
app/CubismSdkForNative-5-r.3/Framework/src/Motion/: ACubismMotion.cpp  ACubismMotion.hpp  CMakeLists.txt  CubismMotion.cpp  CubismMotion.hpp
app/CubismSdkForNative-5-r.3/Framework/src/Physics/: CMakeLists.txt
app/CubismSdkForNative-5-r.3/Framework/src/Rendering/: CMakeLists.txt
app/CubismSdkForNative-5-r.3/Framework/src/Rendering/D3D11/: CMakeLists.txt  CubismRenderer_D3D11.cpp  CubismRenderer_D3D11.hpp
app/CubismSdkForNative-5-r.3/Framework/src/Rendering/D3D9/: CMakeLists.txt  CubismNativeInclude_D3D9.hpp  CubismOffscreenSurface_D3D9.hpp  CubismRenderState_D3D9.cpp  CubismRenderState_D3D9.hpp  CubismRenderer_D3D9.cpp  CubismRenderer_D3D9.hpp  CubismShader_D3D9.hpp
app/CubismSdkForNative-5-r.3/Framework/src/Rendering/Metal/: CMakeLists.txt  CubismCommandBuffer_Metal.hpp  CubismCommandBuffer_Metal.mm  CubismOffscreenSurface_Metal.hpp  CubismRenderer_Metal.hpp  CubismRenderer_Metal.mm  CubismShader_Metal.hpp
app/CubismSdkForNative-5-r.3/Framework/src/Rendering/OpenGL/: CMakeLists.txt  CubismOffscreenSurface_OpenGLES2.cpp  CubismOffscreenSurface_OpenGLES2.hpp  CubismRenderer_OpenGLES2.cpp  CubismRenderer_OpenGLES2.hpp  CubismShader_OpenGLES2.cpp  CubismShader_OpenGLES2.hpp
app/CubismSdkForNative-5-r.3/Framework/src/Rendering/Vulkan/: CMakeLists.txt  CubismClass_Vulkan.hpp  CubismOffscreenSurface_Vulkan.hpp  CubismRenderer_Vulkan.cpp  CubismRenderer_Vulkan.hpp
app/CubismSdkForNative-5-r.3/Framework/src/Type/: CMakeLists.txt
app/CubismSdkForNative-5-r.3/Framework/src/Utils/: CMakeLists.txt
app/CubismSdkForNative-5-r.3/Samples/D3D11/Demo/proj.d3d11.cmake/: CMakeLists.txt
app/CubismSdkForNative-5-r.3/Samples/D3D11/Demo/proj.d3d11.cmake/src/: CubismDirectXRenderer.hpp  CubismDirectXView.hpp  CubismSprite.cpp  CubismUserModelExtend.cpp  LAppAllocator.hpp  LAppSprite.cpp  LAppView.hpp
app/CubismSdkForNative-5-r.3/Samples/D3D9/Demo/proj.d3d9.cmake/: CMakeLists.txt
app/CubismSdkForNative-5-r.3/Samples/D3D9/Demo/proj.d3d9.cmake/src/: CMakeLists.txt  (+9 more)
app/CubismSdkForNative-5-r.3/Samples/Metal/Demo/proj.ios.cmake/: CMakeLists.txt
app/CubismSdkForNative-5-r.3/Samples/OpenGL/Demo/proj.ios.cmake/: CMakeLists.txt
app/CubismSdkForNative-5-r.3/Samples/OpenGL/Demo/proj.linux.cmake/: CMakeLists.txt
app/CubismSdkForNative-5-r.3/Samples/OpenGL/Demo/proj.mac.cmake/: CMakeLists.txt
app/CubismSdkForNative-5-r.3/Samples/OpenGL/Demo/proj.win.cmake/: CMakeLists.txt
app/CubismSdkForNative-5-r.3/Samples/Vulkan/Demo/proj.linux.cmake/: CMakeLists.txt
app/CubismSdkForNative-5-r.3/Samples/Vulkan/Demo/proj.win.cmake/: CMakeLists.txt
app/src/main/: AndroidManifest.xml
app/src/main/assets/Icha/: Icha.model3.json  shidiq.cdi3.json  shidiq.moc3  shidiq.physics3.json
app/src/main/assets/live2d/: icha.model3.json
app/src/main/cpp/: CubismModelSettingJson.cpp  CubismModelSettingJson.hpp  JniBridgeC.cpp  LAppAllocator.cpp  LAppAllocator.hpp  LAppLive2DManager.cpp  LAppLive2DManager.hpp  LAppModel.cpp  LAppModel.hpp  Live2D.cpp  Live2DRenderer.cpp  aichaprototype110.cpp  live2d_native.cpp  native-lib.cpp
app/src/main/res/drawable/: ic_visibility.xml  ic_visibility_off.xml
app/src/main/res/layout/: activity_main.xml  activity_splash.xml  activity_voice_recorder.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
(+83 files in other folders)
